--- a/styles/style.css
+++ b/styles/style.css
@@ -40,8 +40,11 @@ span {
 
 /* hero section  */
 .hero {
-  background: url(../assets/hero-bg.png);
+  background-image: url(../assets/hero-bg.png);
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -57,7 +60,7 @@ span {
   padding-top: 6.25rem;
 }
 .hero-img-background img {
-  width: 350px;
+  width: 22rem;
   position: relative;
   left: 3.5rem;
 }
@@ -262,4 +265,34 @@ iframe {
   width: 40px;
   border-radius: 50%;
   padding: 10px;
+}
+
+/* footer section */
+footer {
+  background-image: url(../assets/footer-bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+  padding: 120px;
+}
+.footer-container {
+}
+
+.footer-container h1 {
+  font-size: 88px;
+  text-align: center;
+}
+.footer-links {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+}
+.links {
+  display: flex;
+  gap: 8px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+}
+.footer-container p {
+  text-align: center;
 }
