--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+/* common styles */
+
 * {
   margin: 0px;
 }
@@ -6,6 +8,11 @@ body {
   color: #ffffff;
   font-family: "Inter", sans-serif;
 }
+
+.bg {
+  background-color: #f7e93f;
+}
+
 /* nav bar */
 nav {
   display: flex;
@@ -134,7 +141,7 @@ span {
   margin-top: 160px;
 }
 .about-data h1 {
-  font: 48px;
+  font-size: 48px;
   color: #00ff88;
   font-weight: bold;
 }
@@ -312,4 +319,8 @@ footer {
 }
 .footer-container p {
   text-align: center;
+}
+
+.hide {
+  display: none !important;
 }
